--- a/dataviz_4/style.css
+++ b/dataviz_4/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
 
+@font-face{
+    font-family: NASA;
+    src: url('nasadings-1wzj-webfont.woff') format("woff");
+  }
+
 div{
     font-family:NASA;
   }
@@ -7,7 +12,7 @@ div{
     background-color:rgb(255, 255, 255);
     font-family: 'Space Grotesk';
     padding: 10px;
-    margin:2px;
+    margin: 2px;
   }
   h1 {
     color:black;
@@ -18,26 +23,9 @@ div{
   }
   h3 {
     font-family: "Space Grotesk";
-    font-style: medium;
-    font-size: 20px;
+    font-weight: 300;
   }
-  h4{
-    font-family: "Space Grotesk";
-    text-align: right; 
-    font-style: light;
-    font-size: 15px;
-  }
-  h5{
-    font-family: "Space Grotesk";
-    font-style: light;
-    font-size: 15px;
-  }
-
   h6{
     font-family: "Space Grotesk";
     text-align: right;
-    font-style: light;
-  }
-  p {
-    font-family: 'Courier New', Courier, monospace;
   }
