--- a/experiencia/experiencia/experiencia.css
+++ b/experiencia/experiencia/experiencia.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
 
 body {
-    background: url("galaxia.gif") no-repeat;
+    background: url('https://olmiave.github.io/vd_s2_tp2_Oliva_Olivera/imagenes/galaxia.gif') no-repeat;
     background-size: cover;
     font-family: 'Space Grotesk';
     padding: 0px;
@@ -27,7 +27,7 @@ body {
 
 /* Estilos para los cuadrados */
 .square {
-    width: 500px;
+    width: 538px;
     height: 500px;
     margin: 10px 20px 50px 55px;
     float: left;
