--- a/experiencia/experiencia/style.css
+++ b/experiencia/experiencia/style.css
@@ -12,7 +12,7 @@ body {
     /* background-size: contain; */
     /* background-repeat: no-repeat; */
      transition: background-color 1s ease;
-	background: url("galaxy.gif") no-repeat;
+	background: url('https://olmiave.github.io/vd_s2_tp2_Oliva_Olivera/imagenes/galaxy.gif') no-repeat;
     background-size: cover;
     font-family: 'Space Grotesk';
     padding: 10px;
