--- a/experiencia/experiencia.css
+++ b/experiencia/experiencia.css
@@ -25,77 +25,7 @@ body {
     font-size:70px;
 }
 
-/* Estilos para los cuadrados */
-.square {
-    width: 538px;
-    height: 500px;
-    margin: 10px 20px 50px 55px;
-    float: left;
-    position: relative;
-    background-color: #333333;
-    border-radius: 5px;
-    overflow: hidden;
-    border-radius: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* flex-direction: column; */
-    /* padding: 20px; */
-    margin-bottom: 50px;
-}
 
-/* Estilos para los cuadrados */
-.square .image {
-    width: 100%;
-    height: 100%;
-    background-position: relative;
-    background-size: contain;
-    object-fit: contain;
-    /* object-fit: cover; */
-}
-
-.square .content {
-    width: 100%;
-    height: 50%;
-    padding: 10px;
-    box-sizing: border-box;
-    background-color: #b8bfdb;
-    position: absolute;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.square .subtitle {
-    font-size: 24px;
-    margin: 0;
-    text-align: center;
-}
-
-.square .subtitle2{
-    font-size: 24px;
-    margin: 0;
-    text-align: left;
-}
-
-.square .description {
-    font-size: 16px;
-    margin: 10px 0;
-    text-align: left;
-}
-
-.square .button {
-    display: block;
-    background-color:  #623b6e;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-    border-radius: 5px;
-    text-decoration: none;
-    margin-top: 20px;
-}
 
 /* Estilos para los rectángulos */
 .rectangle {
@@ -117,8 +47,8 @@ body {
 
 /* Estilos para los rectángulos */
 .rectangle .image {
-    width: 100%;
-    height: 115%;
+    width: 105%;
+    height: 122%;
     background-position: contain;
     background-size: contain;
     object-fit: contain;
@@ -160,7 +90,7 @@ body {
 
 .rectangle .button {
     display: block;
-    background-color: 
+    background-color:
     #623b6e
     ;
     color: #fff;
@@ -170,13 +100,83 @@ body {
     text-decoration: none;
     margin-top: 20px;
   }
-  
-
-		
-
-  
 
 
+  .rectangle1 {
+    width: 1115px;
+    height: 300px;
+    margin: 50px 50px;
+    float: right; /* se cambia de 'left' a 'right' */
+    position: relative;
+    background-color: #333;
+    border-radius: 15px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    margin-bottom: 50px;
+    }
+    
+    /* Estilos para los rectángulos */
 
-
-
+    .rectangle1 .image {
+    width: 101%;
+    height: 115%;
+    background-position: contain;
+    background-size: contain;
+    object-fit: contain;
+    position: absolute;
+    top: 10;
+    right: 0; /* Se cambia de 'left' a 'right' */
+    }
+    
+    .rectangle1 .content {
+    width: 50%;
+    height: 100%;
+    padding: 40px;
+    box-sizing: border-box;
+    background-color: #b8bfdb;
+    position: absolute;
+    left: 0; /* Se cambia de 'right' a 'left' */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    }
+    
+    .rectangle1 .subtitle {
+    font-size: 24px;
+    margin: 0;
+    text-align: center;
+    }
+    .rectangle1 .subtitle2{
+    font-size: 24px;
+    margin: 0;
+    text-align: left;
+    }
+    
+    .rectangle1 .description {
+    font-size: 16px;
+    margin: 10px 0;
+    text-align: left;
+    }
+    
+    .rectangle1 .button {
+    display: block;
+    background-color:
+    #623b6e
+    ;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-top: 20px;
+    }
+    
+    
+    
+    
+    
